<resources>
    <string name="app_name">Motukā</string>
    <string name="slogan">Let’s find the right vehicle for you!</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="top_picks">Top Picks</string>
    <string name="categories">Categories</string>
    <string name="hybrid_cars">Hybrid</string>
    <string name="Hybrid_subtitle">Looking for a hybrid as your next car? Here is a list of the best.</string>
    <string name="petrol_cars">Petrol</string>
    <string name="Petrol_subtitle">Looking for a petrol vehicle as your next car? Here is a list of the best.</string>
    <string name="electric_cars">Electric</string>
    <string name="Electric_subtitle">Looking for an EV as your next car? Here is a list of the best.</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
    <string name="searchSlogan">Let\'s find your dream car</string>
    <string name="refine">Refine</string>
    <string name="apply_filters">Apply filters</string>
    <string name="back_arrow">back arrow</string>
    <string name="search_results">Search results for</string>
    <string name="no_result_found">No result found</string>
    <string name="no_vehicle_match">We can\'t find any vehicles matching your search</string>
    <string name="reset">Reset</string>
    <string name="no_favourites_found">No favourites found</string>
    <string name="no_favourties_subtitle">You can add vehicles to your favourites list by clicking the heart icon on their listing</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="recommendations">Recommendations</string>
    <string name="placeholder">placeholder</string>
    <string name="retail_price">Retail Price</string>
</resources>