<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ListActivity">

    <!-- Used to click anywhere to close search bar -->
    <ImageView
        android:id="@+id/closeSearchArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/ListActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Header Section -->
    <RelativeLayout
        android:id="@+id/ListActionBar"
        android:layout_height="70dp"
        android:background="@color/blue"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Container">

        <ImageButton
            android:id="@+id/listBackButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:contentDescription="@string/back_arrow"
            android:scaleType="fitCenter"
            android:src="@drawable/back_arrow_icon" />

        <SearchView
            android:id="@+id/ListSearchBar"
            style="@style/RoundedBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:elevation="20dp"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/search_hint"
            android:visibility="invisible"
            app:theme="@style/AppSearchView" />

        <ImageButton
            android:id="@+id/listSearchButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/search"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/search_icon_white" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/ListActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/ListHeader"
                style="@style/Container"
                android:layout_height="160dp"
                android:background="@color/blue"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/ListTitle"
                    style="@style/Headline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/categories" />

                <TextView
                    android:id="@+id/ListSubtitle"
                    style="@style/Subtitle1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ListTitle"
                    android:layout_marginStart="40dp"
                    android:text="@string/slogan" />

                <ImageView
                    android:id="@+id/ListHeaderImage"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="-50dp"
                    android:contentDescription="@string/electric_cars"
                    android:src="@drawable/electric" />

            </RelativeLayout>

            <LinearLayout
                style="@style/RoundedBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:backgroundTint="@color/white"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/ListHeader">

                <RelativeLayout
                    android:id="@+id/refineBtn"
                    style="@style/RoundedBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/blue"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/refineIcon"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/refine_icon_white" />

                    <TextView
                        android:id="@+id/refineTitle"
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/refineIcon"
                        android:text="@string/refine" />

                    <ImageView
                        android:id="@+id/refineArrowDown"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_toEndOf="@id/refineTitle"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/down_icon_white" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/listNoResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-50dp"
                    android:layout_marginStart="-10dp"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/noResultsImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        android:layout_gravity="center_horizontal"
                        app:lottie_rawRes="@raw/no_results"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-100dp"
                        android:layout_gravity="center_horizontal"
                        android:text="No result found"
                        style="@style/Subtitle2"/>
                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:text="We can't find any vehicles matching your search"
                        style="@style/Body1"/>
                    <Button
                        android:id="@+id/listResetBtn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="Reset"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="100dp"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:itemIconSize="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@navigation/bottom_nav_menu">
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>