<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/yellow"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/home_image"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:id="@+id/AppTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Slogan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/slogan"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/CatTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/categories"
                    android:textAlignment="textStart"
                    android:textColor="@color/blackGrey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/CatElectric"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="@drawable/electric_background"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/CatElectricText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/electric_cars"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/CatElectricImg"
                            android:layout_width="0dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/electric_cars"
                            android:paddingLeft="100dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/sedan" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CatHybrid"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="@drawable/hybrid_background"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/CatHybridText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/hybrid_cars"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/CatHybridImage"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:paddingLeft="50dp"
                            android:contentDescription="@string/hybrid_cars"
                            android:scaleType="centerCrop"
                            android:src="@drawable/hatchback" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CatPetrol"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="@drawable/petrol_background"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/CatPetrolTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:text="@string/petrol_cars"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/CatPetrolImg"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:paddingLeft="50dp"
                            android:scaleType="centerCrop"
                            android:layout_weight="1"
                            android:contentDescription="@string/petrol_cars"
                            android:src="@drawable/truck" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>